--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Toro gym</title>
+    <title>Toro gym.</title>
 </head>
 <body>
 
@@ -95,7 +95,7 @@
         <article class="box2 b2">
             <div>
                 <h2>Temas de interes</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus quia maxime inventore similique! Debitis ex laborum, praesentium tempora quibusdam qui architecto, delectus atque voluptatem amet cumque sed explicabo impedit voluptatum!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus quia maxime inventore similique! Debitis ex laborum, praesentium tempora quibusdam qui architecto, delectus atque voluptatem amet cumque sed explicabo impedit voluptatumcree una rama!</p>
             </div>
             <img src="assets/images/bodygym3.avif" alt="">
         </article>
