reestructure boxeo.scss

--- a/pages/boxeo.html
+++ b/pages/boxeo.html
@@ -49,8 +49,8 @@
     
 
       <main>
-        <section class="grid">
-          <article class="box2 b1">
+        <section class="grid__boxeo">
+          <article class="box__boxeo c1">
               <div>
                   <h2>Boxeo competitivo</h2>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi animi aut facere enim vitae possimus numquam error odio. Accusamus asperiores quod blanditiis beatae nemo, culpa nisi debitis dolorum ad at?</p>
@@ -58,7 +58,7 @@
               <img src="../assets/images/boxeo1.avif" alt="">
           </article>
   
-          <article class="box2 b2">
+          <article class="box__boxeo c2">
               <div>
                   <h2>Boxeo recreativo</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore neque quasi rem, consequuntur in eaque qui veniam similique eveniet tempore iusto voluptas vitae exercitationem. Porro veritatis quis repudiandae at et.</p>
@@ -66,7 +66,7 @@
               <img src="../assets/images/boxeo2.avif" alt="">
           </article>
   
-          <article class="box2 b3">
+          <article class="box__boxeo c3">
               <div>
                   <h2>Boxeo profesional</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nemo minus voluptas quaerat impedit voluptate inventore officiis quidem, corrupti nostrum nesciunt, veniam asperiores laudantium, commodi vel maiores quis numquam neque?</p>
@@ -74,7 +74,7 @@
               <img src="../assets/images/boxeo3.avif" alt="">
           </article>
   
-          <article class="box2 b4">
+          <article class="box__boxeo c4">
               <div>
                   <h2>Primeros pasos</h2>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto quos molestias blanditiis culpa, hic deleniti enim iusto! Laboriosam quas alias possimus soluta quis libero. Distinctio nam incidunt dolorem aliquid amet?</p>
@@ -82,7 +82,7 @@
               <img src="../assets/images/boxeo4.avif" alt="">
           </article>
   
-          <article class="box2 b5">
+          <article class="box__boxeo c5">
               <div>
                   <h2>Guantes y tipos</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis porro repudiandae corrupti ex distinctio optio, cum, quod officia ratione alias exercitationem vitae a aliquid similique sequi sit adipisci maiores atque.</p>
@@ -90,7 +90,7 @@
               <img src="../assets/images/boxeo5.avif" alt="">
           </article>
   
-          <article class="box2 b6">
+          <article class="box__boxeo c6">
               <div>
                   <h2>Historia del boxeo</h2>
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A alias dicta vero laudantium nam iure natus nobis consequuntur voluptate perspiciatis commodi nihil at fugiat, totam, distinctio nisi. Illum, nam veritatis.</p>
