--- a/pages/spinning.html
+++ b/pages/spinning.html
@@ -47,12 +47,12 @@
  </header>
     
     <main>
-        <section class="hero-container">
-            <article class="box">
-                <div class="box-img">
+        <section class="hero__container__spinning">
+            <article class="box__spinning">
+                <div class="box__img__spinning">
                     <img src="../assets/images/spinning1.avif" alt="">
                 </div>
-                <div class="box-content">
+                <div class="box__content__spinning">
                     <h2>Clases para princpiantes</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ab tempora nostrum. Perferendis, aperiam! Atque cumque ex blanditiis voluptatem dignissimos exercitationem odit beatae, aut quo corrupti, unde cupiditate error tempore?</p> 
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nihil quasi esse optio, mollitia aspernatur. Dolore, sit sequi possimus totam temporibus error dolor, culpa sunt, aut saepe aliquam ducimus ea!</p>
@@ -60,11 +60,11 @@
                 </div>
             </article>
 
-            <article class="box">
-                <div class="box-img">
+            <article class="box__spinning">
+                <div class="box__img__spinning">
                     <img src="../assets/images/spinning2.avif" alt="">
                 </div>
-                <div class="box-content">
+                <div class="box__content__spinning">
                     <h2>Clases para intermedios</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, fugit labore repellat odit tempora sit laboriosam in omnis id natus praesentium cum provident expedita maiores eaque veritatis vel quo aut.</p> 
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloremque rem assumenda nisi odio odit praesentium nemo eum, quas numquam alias quibusdam corporis sed iste facilis tempora. Neque, dolorum ipsum!</p>
@@ -72,11 +72,11 @@
                 </div>
             </article>
 
-            <article class="box">
-                <div class="box-img">
+            <article class="box__spinning">
+                <div class="box__img__spinning">
                     <img src="../assets/images/spinning3.avif" alt="">
                 </div>
-                <div class="box-content">
+                <div class="box__content__spinning">
                     <h2>Clases avanzadas</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloremque rem assumenda nisi odio odit praesentium nemo eum, quas numquam alias quibusdam corporis sed iste facilis tempora. Neque, dolorum ipsum!</p> 
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui recusandae nostrum delectus nulla harum expedita vero, aliquid inventore dolores in illo similique unde accusamus neque itaque, sunt corporis blanditiis commodi.</p>
