--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,8 +47,8 @@
   </header>
 
   <main>
-    <section class="grid2">
-      <article class="box2 b1">
+    <section class="grid__contacto">
+      <article class="box__contacto ct1">
         <div>
           <h2>Redes sociales</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis ducimus fugit, exercitationem harum placeat quod vel odit rem, aperiam quisquam maiores quasi magnam asperiores? Sapiente, tempora? Corrupti ipsum dolor accusantium.</p>
@@ -56,7 +56,7 @@
         <img src="../assets/images/redessociales1.avif" alt="">
       </article>
   
-      <article class="box2 b2">
+      <article class="box__contacto ct2">
         <div>
           <h2>Nuestras sedes</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod odit assumenda iusto? Impedit tenetur quis sunt, excepturi doloribus voluptates et magnam perspiciatis voluptatibus, eaque praesentium sint vitae nam dolorum libero!</p>
@@ -65,7 +65,7 @@
   
       </article>
   
-      <article class="box2 b3 ">
+      <article class="box__contacto ct3 ">
         <div>
           <h2>Telefonos</h2>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque suscipit facilis ut, a esse neque. Nemo aliquid natus maxime accusantium obcaecati quasi esse nostrum quam, atque consectetur dolor, perspiciatis cupiditate.</p>
