--- a/pages/crossfit.html
+++ b/pages/crossfit.html
@@ -49,19 +49,19 @@
   </header>
 
   <main>
-    <section class="hero2 bg-bchmnd">
+    <section class="hero__crossfit bg-bchmnd">
       <article class="w-50">
           <h1 class="text-white display-2">Toma las mejores clases de crossfit.</h1>
       <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates reiciendis ducimus a culpa fugiat expedita inventore magnam atque nulla ipsam, voluptate labore, porro reprehenderit perferendis error accusamus laudantium repudiandae architecto!</p>
       </article>
     </section>
 
-    <section class="hero-container">
-      <article class="box">
-          <div class="box-img">
+    <section class="hero__container__crossfit">
+      <article class="box__crossfit">
+          <div class="box__img__crossfit">
               <img src="../assets/images/spinning1.avif" alt="">
           </div>
-          <div class="box-content">
+          <div class="box__content__crossfit">
               <h2>Clases para princpiantes</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id amet ab aut voluptatibus iste nulla, soluta reprehenderit obcaecati modi, illo porro odio cum assumenda nesciunt in dicta consectetur molestias fuga!</p> 
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam necessitatibus nulla dolor officiis, unde eaque deserunt molestias voluptas eveniet! Nihil magnam fugiat eaque doloremque. Corporis nisi illum laborum rerum at.</p>
@@ -69,15 +69,15 @@
           </div>
       </article>
 
-      <article class="box">
+      <article class="box__crossfit">
           
-          <div class="box-content">
+          <div class="box__content__crossfit">
               <h2>Clases para intermedios</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloremque rem assumenda nisi odio odit praesentium nemo eum, quas numquam alias quibusdam corporis sed iste facilis tempora. Neque, dolorum ipsum!</p> 
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus reiciendis minima incidunt aut quo. Aut deleniti placeat nesciunt fugit non ipsum sequi eaque, quas rem tempore amet vero, facere iste.</p>
               
           </div>
-          <div class="box-img">
+          <div class="box__img__crossfit">
             <img src="../assets/images/spinning2.avif" alt="">
         </div>
       </article>
@@ -85,8 +85,8 @@
 
   </section>
 
-  <section class="grid2">
-    <article class="box2 b1">
+  <section class="grid__crossfit">
+    <article class="box__crossfit2 b1">
         <div>
             <h2>Crossfit princpiantes</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda atque est sit quasi nam labore, dolores deleniti dolorum explicabo iste exercitationem dolor, eaque et. Placeat excepturi recusandae eaque aut tempore.</p>
@@ -94,7 +94,7 @@
         <img src="../assets/images/bodygym3.avif" alt="">
     </article>
 
-    <article class="box2 b2">
+    <article class="box__crossfit2 b2">
         <div>
             <h2>Crossfit avanzados</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia libero ipsa soluta officiis, odio cumque hic numquam nihil quo cum maiores quibusdam voluptate ex repudiandae modi quos dolorum labore veritatis..</p>
@@ -102,7 +102,7 @@
         <img src="../assets/images/crossfit4.avif" alt="">
     </article>
 
-    <article class="box2 b3">
+    <article class="box__crossfit2 b3">
         <div>
             <h2>crossfit Competencia</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur odit et rerum perferendis iure aspernatur exercitationem facere vel nemo numquam? Praesentium quo culpa voluptates. Nostrum incidunt perferendis sed eveniet quo?</p>
