reemplace lorems y corregi bugs

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
           <section class="hero bg-icecream">
             <article class="w-50">
-                <h1 class="text-black display-1">Bienvenidos a Toro Gym.</h1>
-            <p class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est ipsum qui nostrum doloremque. Nulla fuga iste, voluptatibus, voluptates non autem ab sit quas incidunt omnis a optio tempore amet ratione!</p>
+                <h1 class="text-black display-1">Bienvenidos a Wake up Gym.</h1>
+            <p class="text-white">En wake up gym encontraras un gimnasio completo, con distintos sectores y diversas actividades para realizar. podes encontrarnos en nuestras redes.</p>
             <a href="pages/contacto.html" class="btn btn-primary">Contactanos.</a>
             </article>
           </section>
@@ -63,8 +63,8 @@
             <article class="card col-md-4" style="width: 18rem;">
                 <img src="assets/images/galeria2.avif" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Spinning.</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title">+Info Spinning.</h5>
+                  <p class="card-text">Veni a disfrutar de las clases de spinning a cargo de la profesora Liliana.</p>
                   <a href="pages/spinning.html" class="btn btn-primary">Ir a Spinning.</a>
                 </div>
               </article>
@@ -73,7 +73,7 @@
                 <img src="assets/images/crossfit1.avif" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">+Info Crossfit.</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Estas buscando un ritmo mas acelerado? Entonces veni a probar nuestras clases de crossfit.</p>
                   <a href="pages/crossfit.html" class="btn btn-primary">Ir a Crossfit.</a>
                 </div>
               </article>
@@ -82,7 +82,7 @@
                 <img src="assets/images/boxeo2.avif" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">+Info boxeo.</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Si te gustan los desafios, esta es el deporte indicado para vos.</p>
                   <a href="pages/boxeo.html" class="btn btn-primary">Ir a Boxeo.</a>
                 </div>
               </article>
@@ -94,16 +94,16 @@
     
         <article class="box2 b2">
             <div>
-                <h2>Temas de interes</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus quia maxime inventore similique! Debitis ex laborum, praesentium tempora quibusdam qui architecto, delectus atque voluptatem amet cumque sed explicabo impedit voluptatum!</p>
+                <h2>Horarios</h2>
+                <p>Podras disfrutar del gym de Lunes a Viernes de 8am a 21pm y los dias Sabados de 9am a 14pm</p>
             </div>
             <img src="assets/images/bodygym3.avif" alt="">
         </article>
     
         <article class="box2 b1">
             <div>
-                <h2>Temas de interes</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ipsam numquam, exercitationem facere atque saepe pariatur illo impedit minima praesentium cupiditate harum sint. Et, libero quisquam odit at nobis obcaecati!</p>
+                <h2>Tarifas</h2>
+                <p>Tenemos diferentes tarifas adaptadas a cada una de tus necesidades. Consultalas contactandote con nosotros.</p>
             </div>
             <img src="assets/images/galeria1.avif" alt="">
         </article>    
