--- a/pages/boxeo.html
+++ b/pages/boxeo.html
@@ -54,7 +54,7 @@
           <article class="box__boxeo c1">
               <div>
                   <h2>Boxeo competitivo</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi animi aut facere enim vitae possimus numquam error odio. Accusamus asperiores quod blanditiis beatae nemo, culpa nisi debitis dolorum ad at?</p>
+                  <p>Entrenamiento de primera para competidores, seguimientos, alimentacion, rutinas y mucho mas.</p>
               </div>
               <img src="../assets/images/boxeo1.avif" alt="">
           </article>
@@ -62,7 +62,7 @@
           <article class="box__boxeo c2">
               <div>
                   <h2>Boxeo recreativo</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore neque quasi rem, consequuntur in eaque qui veniam similique eveniet tempore iusto voluptas vitae exercitationem. Porro veritatis quis repudiandae at et.</p>
+                  <p>Competir no es obligatorio, podes venir a disfrutar de un entrenamiento completo sin la exigencia de subirte al ring.</p>
               </div>
               <img src="../assets/images/boxeo2.avif" alt="">
           </article>
@@ -70,7 +70,7 @@
           <article class="box__boxeo c3">
               <div>
                   <h2>Boxeo profesional</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nemo minus voluptas quaerat impedit voluptate inventore officiis quidem, corrupti nostrum nesciunt, veniam asperiores laudantium, commodi vel maiores quis numquam neque?</p>
+                  <p>Tenemos las mejores instalaciones de zona sur para que puedas continuar tu carrera de la mejor manera posible.</p>
               </div>
               <img src="../assets/images/boxeo3.avif" alt="">
           </article>
@@ -78,7 +78,7 @@
           <article class="box__boxeo c4">
               <div>
                   <h2>Primeros pasos</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto quos molestias blanditiis culpa, hic deleniti enim iusto! Laboriosam quas alias possimus soluta quis libero. Distinctio nam incidunt dolorem aliquid amet?</p>
+                  <p>Cursos de vendaje y guardia para los recien llegados, charlas y demas te estan esperando para iniciar este nuevo viaje. Te esperamos</p>
               </div>
               <img src="../assets/images/boxeo4.avif" alt="">
           </article>
@@ -86,15 +86,15 @@
           <article class="box__boxeo c5">
               <div>
                   <h2>Guantes y tipos</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis porro repudiandae corrupti ex distinctio optio, cum, quod officia ratione alias exercitationem vitae a aliquid similique sequi sit adipisci maiores atque.</p>
+                  <p>Charlas y cursos sobre relleno, composicion y talles, especializados para cada competidor del gym. Te esperamos</p>
               </div>
               <img src="../assets/images/boxeo5.avif" alt="">
           </article>
   
           <article class="box__boxeo c6">
               <div>
-                  <h2>Historia del boxeo</h2>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A alias dicta vero laudantium nam iure natus nobis consequuntur voluptate perspiciatis commodi nihil at fugiat, totam, distinctio nisi. Illum, nam veritatis.</p>
+                  <h2>Nuestro recorrido en el boxeo.</h2>
+                  <p>Podes acercarte a conocer las instalaciones, a nuestros competidores y nuestras batallas ganadas. Te esperamos</p>
               </div>
               <img src="../assets/images/boxeo6.avif" alt="">
           </article>
