--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,15 +51,21 @@
       <article class="box__contacto ct1">
         <div>
           <h2>Redes sociales</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis ducimus fugit, exercitationem harum placeat quod vel odit rem, aperiam quisquam maiores quasi magnam asperiores? Sapiente, tempora? Corrupti ipsum dolor accusantium.</p>
+          <p>Visitanos en nuestras redes sociales.
+            Facebook: 
+            Instagram:
+            X:
+            Ytb:
+          </p>
         </div>
         <img src="../assets/images/redessociales1.avif" alt="">
       </article>
   
       <article class="box__contacto ct2">
         <div>
-          <h2>Nuestras sedes</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod odit assumenda iusto? Impedit tenetur quis sunt, excepturi doloribus voluptates et magnam perspiciatis voluptatibus, eaque praesentium sint vitae nam dolorum libero!</p>
+          <h2>Nuestra sede</h2>
+          <p>Veni a conocer el lugar.
+          </p>
         </div>
         <img src="../assets/images/galeria2.avif" alt="">
   
@@ -68,7 +74,12 @@
       <article class="box__contacto ct3 ">
         <div>
           <h2>Telefonos</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque suscipit facilis ut, a esse neque. Nemo aliquid natus maxime accusantium obcaecati quasi esse nostrum quam, atque consectetur dolor, perspiciatis cupiditate.</p>
+          <p>Comunicate con nosotros para obtener la informacion que necesites.
+            Tel: ""
+
+
+            Wp: ""
+          </p>
         </div>
         <img src="../assets/images/contacto1.avif" alt="">
   
@@ -78,7 +89,7 @@
 
   <section>
     <article class="p-5 text-center m-5 col-12">
-      <h2 class="display-5 bg-bchmnd">Encontranos.</h2>
+      <h2 class="display-5 bg-bchmnd">Envianos tus dudas.</h2>
   </article>
   </section>
 
