agregue bucle pd

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </section>
           </nav>
 
-          <section class="hero bg-icecream">
+          <section class="hero bg-icecream pd-10">
             <article class="w-50">
                 <h1 class="text-black display-1">Bienvenidos a Wake up Gym.</h1>
             <p class="text-white">En wake up gym encontraras un gimnasio completo, con distintos sectores y diversas actividades para realizar. podes encontrarnos en nuestras redes.</p>
