--- a/pages/boxeo.html
+++ b/pages/boxeo.html
@@ -50,9 +50,9 @@
     
 
       <main>
-        <section class="grid__boxeo">
+        <section class="grid__boxeo pd-15">
           <article class="box__boxeo c1">
-              <div>
+              <div class="pd-10">
                   <h2>Boxeo competitivo</h2>
                   <p>Entrenamiento de primera para competidores, seguimientos, alimentacion, rutinas y mucho mas.</p>
               </div>
@@ -60,7 +60,7 @@
           </article>
   
           <article class="box__boxeo c2">
-              <div>
+              <div class="pd-10">
                   <h2>Boxeo recreativo</h2>
                   <p>Competir no es obligatorio, podes venir a disfrutar de un entrenamiento completo sin la exigencia de subirte al ring.</p>
               </div>
@@ -68,7 +68,7 @@
           </article>
   
           <article class="box__boxeo c3">
-              <div>
+              <div class="pd-10">
                   <h2>Boxeo profesional</h2>
                   <p>Tenemos las mejores instalaciones de zona sur para que puedas continuar tu carrera de la mejor manera posible.</p>
               </div>
@@ -76,7 +76,7 @@
           </article>
   
           <article class="box__boxeo c4">
-              <div>
+              <div class="pd-10">
                   <h2>Primeros pasos</h2>
                   <p>Cursos de vendaje y guardia para los recien llegados, charlas y demas te estan esperando para iniciar este nuevo viaje. Te esperamos</p>
               </div>
@@ -84,7 +84,7 @@
           </article>
   
           <article class="box__boxeo c5">
-              <div>
+              <div class="pd-10">
                   <h2>Guantes y tipos</h2>
                   <p>Charlas y cursos sobre relleno, composicion y talles, especializados para cada competidor del gym. Te esperamos</p>
               </div>
@@ -92,7 +92,7 @@
           </article>
   
           <article class="box__boxeo c6">
-              <div>
+              <div class="pd-10">
                   <h2>Nuestro recorrido en el boxeo.</h2>
                   <p>Podes acercarte a conocer las instalaciones, a nuestros competidores y nuestras batallas ganadas. Te esperamos</p>
               </div>
