--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,9 +47,9 @@
   </header>
 
   <main>
-    <section class="grid__contacto">
+    <section class="grid__contacto pd-15">
       <article class="box__contacto ct1">
-        <div>
+        <div class="pd-10">
           <h2>Redes sociales</h2>
           <p>Visitanos en nuestras redes sociales.
             Facebook: 
@@ -62,7 +62,7 @@
       </article>
   
       <article class="box__contacto ct2">
-        <div>
+        <div class="pd-10">
           <h2>Nuestra sede</h2>
           <p>Veni a conocer el lugar.
           </p>
@@ -72,7 +72,7 @@
       </article>
   
       <article class="box__contacto ct3 ">
-        <div>
+        <div class="pd-10">
           <h2>Telefonos</h2>
           <p>Comunicate con nosotros para obtener la informacion que necesites.
             Tel: ""
