--- a/pages/crossfit.html
+++ b/pages/crossfit.html
@@ -49,14 +49,14 @@
   </header>
 
   <main>
-    <section class="hero__crossfit bg-bchmnd">
+    <section class="hero__crossfit pd-10 bg-bchmnd">
       <article>
           <h1 class="text-black display-1">Toma las mejores clases de crossfit.</h1>
       <p class="text-white">Estamos instalando esta nueva seccion para poder competir a un buen nivel.</p>
       </article>
     </section>
 
-    <section class="hero__container__crossfit">
+    <section class="hero__container__crossfit pd-10">
       <article class="box__crossfit">
           <div class="box__img__crossfit">
               <img src="../assets/images/spinning1.avif" alt="">
@@ -69,7 +69,7 @@
           </div>
       </article>
 
-      <article class="box__crossfit">
+      <article class="box__crossfit pd-10">
           
           <div class="box__content__crossfit">
               <h2>Clases para intermedios</h2>
@@ -85,9 +85,9 @@
 
   </section>
 
-  <section class="grid__crossfit">
+  <section class="grid__crossfit pd-15">
     <article class="box__crossfit2 b1">
-        <div>
+        <div class="pd-10">
             <h2>Crossfit princpiantes</h2>
             <p>Ejercicios diseñados para lograr un acondicionamiento sin lesiones.</p>
         </div>
@@ -95,7 +95,7 @@
     </article>
 
     <article class="box__crossfit2 b2">
-        <div>
+        <div class="pd-10">
             <h2>Crossfit avanzados</h2>
             <p>Testeos, Rutinas, Alimentacion y mucho mas que podes venir a conocer a nuestras nuevas instalaciones. Te esperamos.</p>
         </div>
@@ -103,10 +103,10 @@
     </article>
 
     <article class="box__crossfit2 b3">
-        <div>
+        <div class="pd-10">
             <h2>crossfit Competencia</h2>
             <p>Los mejores preparadores fisicos, y personal trainers para tu crecimiento personal y competitivo. Acercate, te esperamos.
-              
+
             </p>
         </div>
         <img src="../assets/images/bodygym1.avif" alt="">
