--- a/pages/spinning.html
+++ b/pages/spinning.html
@@ -47,7 +47,7 @@
  </header>
     
     <main>
-        <section class="hero__container__spinning">
+        <section class="hero__container__spinning pd-10">
             <article class="box__spinning">
                 <div class="box__img__spinning">
                     <img src="../assets/images/spinning1.avif" alt="">
