--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
       </section>
 
-      <section class="grid2">
+      <section class="grid2 pd-15 gp-15">
     
         <article class="box2 b2">
-            <div>
+            <div class="pd-10">
                 <h2>Horarios</h2>
                 <p>Podras disfrutar del gym de Lunes a Viernes de 8am a 21pm y los dias Sabados de 9am a 14pm</p>
             </div>
@@ -101,7 +101,7 @@
         </article>
     
         <article class="box2 b1">
-            <div>
+            <div class="pd-10">
                 <h2>Tarifas</h2>
                 <p>Tenemos diferentes tarifas adaptadas a cada una de tus necesidades. Consultalas contactandote con nosotros.</p>
             </div>
