--- a/pages/boxeo.html
+++ b/pages/boxeo.html
@@ -50,7 +50,7 @@
     
 
       <main>
-        <section class="grid__boxeo pd-15">
+        <section class="grid__boxeo pd-15 gp-10">
           <article class="box__boxeo c1">
               <div class="pd-10">
                   <h2>Boxeo competitivo</h2>
