--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,7 +47,7 @@
   </header>
 
   <main>
-    <section class="grid__contacto pd-15">
+    <section class="grid__contacto pd-15 gp-15">
       <article class="box__contacto ct1">
         <div class="pd-10">
           <h2>Redes sociales</h2>
