--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -88,7 +88,7 @@
   </main>
 
   <section>
-    <article class="p-5 text-center m-5 col-12">
+    <article class="p-5 text-center m-5">
       <h2 class="display-5 bg-bchmnd">Envianos tus dudas.</h2>
   </article>
   </section>
