--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -48,7 +52,7 @@
 
           <section class="hero bg-icecream pd-10">
             <article class="w-50">
-                <h1 class="text-black display-1">Bienvenidos a Wake up Gym.</h1>
+                <h1 class="text-black display-1 animate__animated animate__swing">Bienvenidos a Wake up Gym.</h1>
             <p class="text-white">En wake up gym encontraras un gimnasio completo, con distintos sectores y diversas actividades para realizar. podes encontrarnos en nuestras redes.</p>
             <a href="pages/contacto.html" class="btn btn-primary">Contactanos.</a>
             </article>
