--- a/pages/crossfit.html
+++ b/pages/crossfit.html
@@ -6,6 +6,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
     <link rel="stylesheet" href="../css/style.css">
     <title>Crossfit</title>
 </head>
@@ -49,7 +54,7 @@
   </header>
 
   <main>
-    <section class="hero__crossfit pd-10 bg-bchmnd">
+    <section class="hero__crossfit pd-10 bg-bchmnd animate__animated animate__swing">
       <article>
           <h1 class="text-black display-1">Toma las mejores clases de crossfit.</h1>
       <p class="text-white">Estamos instalando esta nueva seccion para poder competir a un buen nivel.</p>
@@ -57,7 +62,7 @@
     </section>
 
     <section class="hero__container__crossfit pd-10 gp-10">
-      <article class="box__crossfit pd-10 gp-15">
+      <article class="box__crossfit pd-10 gp-15 animate__animated animate__swing">
           <div class="box__img__crossfit">
               <img src="../assets/images/spinning1.avif" alt="">
           </div>
@@ -69,7 +74,7 @@
           </div>
       </article>
 
-      <article class="box__crossfit pd-10 gp-15">
+      <article class="box__crossfit pd-10 gp-15 animate__animated animate__swing">
           
           <div class="box__content__crossfit gp-15">
               <h2>Clases para intermedios</h2>
@@ -85,7 +90,7 @@
 
   </section>
 
-  <section class="grid__crossfit pd-15 gp-15">
+  <section class="grid__crossfit pd-15 gp-15 animate__animated animate__swing">
     <article class="box__crossfit2 b1">
         <div class="pd-10">
             <h2>Crossfit princpiantes</h2>
