--- a/pages/boxeo.html
+++ b/pages/boxeo.html
@@ -6,6 +6,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
     <link rel="stylesheet" href="../css/style.css">
     <title>Boxeo</title>
 </head>
@@ -50,7 +55,7 @@
     
 
       <main>
-        <section class="grid__boxeo pd-15 gp-10">
+        <section class="grid__boxeo pd-15 gp-10 animate__animated animate__swing">
           <article class="box__boxeo c1">
               <div class="pd-10">
                   <h2>Boxeo competitivo</h2>
