--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
     <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
 </head>
@@ -47,7 +52,7 @@
   </header>
 
   <main>
-    <section class="grid__contacto pd-15 gp-15">
+    <section class="grid__contacto pd-15 gp-15 animate__animated animate__swing">
       <article class="box__contacto ct1">
         <div class="pd-10">
           <h2>Redes sociales</h2>
