--- a/pages/spinning.html
+++ b/pages/spinning.html
@@ -6,6 +6,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
     <link rel="stylesheet" href="../css/style.css">
     <title>Spinning</title>
 </head>
@@ -47,7 +52,7 @@
  </header>
     
     <main>
-        <section class="hero__container__spinning pd-10 gp-10">
+        <section class="hero__container__spinning pd-10 gp-10 animate__animated animate__swing">
             <article class="box__spinning gp-15">
                 <div class="box__img__spinning">
                     <img src="../assets/images/spinning1.avif" alt="">
