--- a/pages/boxeo.html
+++ b/pages/boxeo.html
@@ -19,13 +19,13 @@
   <header>
     <nav class="navbar bg-bchmnd navbar-expand-md">
       <section class="container-fluid">
-        <a class="nav-logo" href="#"><img src="assets/images/toro2.avif" alt="">Toro gym</a>
+        <a class="nav-logo" href="#"><img src="assets/images/toro2.avif" alt="">Wake up gym</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <article class="offcanvas offcanvas-end bg-bchmnd" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Toro gym</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Wake up gym</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -145,7 +145,7 @@
 
     <footer class="footer">
 
-        <p>Toro gym.</p>
+        <p>Wake up gym.</p>
         
     </footer>
 
