--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Toro gym</title>
+    <title>Wake up gym. Un gimnasio para todos.</title>
 </head>
 <body>
 
     <header>
         <nav class="navbar bg-bchmnd navbar-expand-md">
             <section class="container-fluid">
-              <a class="nav-logo" href="#">Toro gym</a>
+              <a class="nav-logo" href="#">Wake up gym</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <article class="offcanvas offcanvas-end bg-bchmnd" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Toro gym</h5>
+                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Wake up gym</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
@@ -141,7 +141,7 @@
 
     <footer class="footer">
 
-        <p>Toro gym.</p>
+        <p>Wake up gym.</p>
         
     </footer>
     
