--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link
@@ -12,6 +13,8 @@
     <link rel="stylesheet" href="css/style.css">
 
     <title>Wake up gym. Un gimnasio para todos.</title>
+    <meta name="description" content="En wake up gym encontraras un lugar agradable y donde superarte dia a dia. visitanos para ver las distintas actividades que ofrecemos">
+    <meta name="keywords" content="GIMNASIO, CROSSFIT, BOXEO, SPINNING, PREPARACION">
 </head>
 <body>
 
