agregue kw y desc

--- a/pages/boxeo.html
+++ b/pages/boxeo.html
@@ -13,6 +13,9 @@
 
     <link rel="stylesheet" href="../css/style.css">
     <title>Boxeo</title>
+
+    <meta name="description" content="Aprende boxeo en todo su esplendor, desde principiantes hasta competidores.">
+    <meta name="keywords" content="GIMNASIO, CROSSFIT, BOXEO, SPINNING, PREPARACION">
 </head>
 <body>
   
