--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,6 +13,9 @@
 
     <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
+
+    <meta name="description" content="No desperdicies tu tiempo y comunicate con nosotros.">
+    <meta name="keywords" content="GIMNASIO, CROSSFIT, BOXEO, SPINNING, PREPARACION">
 </head>
 <body>
   <header>
