--- a/pages/spinning.html
+++ b/pages/spinning.html
@@ -13,6 +13,9 @@
 
     <link rel="stylesheet" href="../css/style.css">
     <title>Spinning</title>
+
+    <meta name="description" content="Clases de spinning divertidas y dinamicas para superarte dia a dia.">
+    <meta name="keywords" content="GIMNASIO, CROSSFIT, BOXEO, SPINNING, PREPARACION">
 </head>
 <body>
  <header>
