--- a/pages/crossfit.html
+++ b/pages/crossfit.html
@@ -13,6 +13,9 @@
 
     <link rel="stylesheet" href="../css/style.css">
     <title>Crossfit</title>
+
+    <meta name="description" content="Crossfit para todos los gustos, te preparamos para competir.">
+    <meta name="keywords" content="GIMNASIO, CROSSFIT, BOXEO, SPINNING, PREPARACION">
 </head>
 <body>
   <header>
