agregue info en crossfit

--- a/pages/crossfit.html
+++ b/pages/crossfit.html
@@ -72,6 +72,9 @@
           <div class="box__content__crossfit gp-15">
               <h2>Clases para princpiantes</h2>
               <p>Destinadas a aquellas personas que estan iniciando este nuevo camino, tenemos todo para prepararte, te esperamos.</p> 
+              <p>Calentamiento: Incluye ejercicios dinámicos como saltos de cuerda, carrera suave, movimientos de articulaciones.
+                Levantamiento de Peso: Se enfoca en movimientos básicos como el squat, press de hombros y deadlifts, utilizando pesos ligeros o sin peso.
+                Metcon (Metabolic Conditioning): Entrenamientos cortos e intensos que combinan movimientos simples como burpees, flexiones y sentadillas, con intervalos de descanso.</p>
               
               
           </div>
