agregue info a contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -103,7 +103,7 @@
 
   <section class="form">
     <form action="">
-      <label for="name">Name</label>
+      <label for="name">Nombre</label>
       <input type="text">
       <label for="email">Email</label>
       <input type="email">
