--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -101,15 +101,21 @@
   </article>
   </section>
 
-  <section class="form">
-    <form action="">
+  <section class="form__container">
+    <form class="form">
+      <h3>Escribenos.</h3>
+      <p>Podes comunicarte con nosotros para sacarte todas tus dudas e inquietudes a traves del siguiente formulario te estamos esperando.</p>
+
+
       <label for="name">Nombre</label>
-      <input type="text">
+      <input type="text" id="nombre" class="box__form__contacto">
+
       <label for="email">Email</label>
-      <input type="email">
-      <label for="message">Mensaje</label>
-      <textarea name="" id="" cols="30" rows="10"></textarea>
-      <input type="button" value="Enviar">
+      <input type="email" id="correo" class="box__form__contacto">
+
+      <label for="message">Deja tu mensaje</label>
+      <textarea id="mensaje" cols="30" rows="10"></textarea>
+      <input type="button" value="Enviar" class="sumbit">
     </form>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.23949906467!2d-58.43329845000001!3d-34.615823750000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses!2sar!4v1705162309109!5m2!1ses!2sar"
