--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,10 +60,10 @@
         <div class="pd-10">
           <h2>Redes sociales</h2>
           <p>Visitanos en nuestras redes sociales.
-            Facebook: 
-            Instagram:
-            X:
-            Ytb:
+            Facebook: wake up gym
+            Instagram: wake_up_gym
+            X: wake up gym
+            Ytb: wake up gym
           </p>
         </div>
         <img src="../assets/images/redessociales1.avif" alt="">
@@ -74,6 +74,7 @@
           <h2>Nuestra sede</h2>
           <p>Veni a conocer el lugar.
           </p>
+          <p>Berazategui, avenida 7 numero 2546. Buenos Aires.</p>
         </div>
         <img src="../assets/images/galeria2.avif" alt="">
   
@@ -83,10 +84,10 @@
         <div class="pd-10">
           <h2>Telefonos</h2>
           <p>Comunicate con nosotros para obtener la informacion que necesites.
-            Tel: ""
+            Tel: "1122334455"
 
 
-            Wp: ""
+            Wp: "1122334455"
           </p>
         </div>
         <img src="../assets/images/contacto1.avif" alt="">
